force-app/main/default/objects/Internal_Payable__c/Internal_Payable__c.object-meta.xml
<CustomObject>
    <label>Internal Payable</label>
    <nameField>
        <label>Internal Payable</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Payables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>