force-app/main/default/objects/Internal_Payable__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Internal Payables</relationshipLabel>
    <relationshipName>Business_Unit_Internal_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>