force-app/main/default/objects/Internal_Payable__c/fields/Compensation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Plan__c</fullName>
    <description>Compensation Plan under which this internal payable was generated.</description>
    <label>Compensation Plan</label>
    <referenceTo>Compensation_Plan__c</referenceTo>
    <relationshipLabel>Internal Payables</relationshipLabel>
    <relationshipName>Compensation_Plan_Internal_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>