force-app/main/default/objects/Internal_Payable__c/fields/Compensation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Rate__c</fullName>
    <description>Compensation rate used to calculate this payable, if applicable.</description>
    <label>Compensation Rate</label>
    <referenceTo>Compensation_Rate__c</referenceTo>
    <relationshipLabel>Internal Payables</relationshipLabel>
    <relationshipName>Compensation_Rate_Internal_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>