force-app/main/default/objects/Internal_Payable__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Expected date this payable should be paid internally.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>