force-app/main/default/objects/Internal_Payable__c/fields/Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Earned_Date__c</fullName>
    <description>Date this payable was earned (job completed, order activated, etc.).</description>
    <label>Earned Date</label>
    <type>Date</type>
</CustomField>