force-app/main/default/objects/Internal_Payable__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Actual date this payable was paid.</description>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>