force-app/main/default/objects/Internal_Payable__c/fields/Pay_Statement_Line__c.field-meta.xml
<CustomField>
    <fullName>Pay_Statement_Line__c</fullName>
    <description>Pay statement line associated withthis internal payable.</description>
    <label>Pay Statement Line</label>
    <referenceTo>Pay_Statement_Line__c</referenceTo>
    <relationshipLabel>Internal Payables</relationshipLabel>
    <relationshipName>Pay_Statement_Line_Internal_Payables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>