force-app/main/default/objects/Internal_Payable__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <description>User who is owed this payable (employee, contractor, sales rep, etc.).</description>
    <label>Payee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Internal Payables</relationshipLabel>
    <relationshipName>Internal_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>