force-app/main/default/objects/Internal_Payable__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the internal payable.</description>
    <label>Status</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>

            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Accruing</fullName>
            </value>
            <value>
                <fullName>Earned</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Written_Off</fullName>
                <label>Written Off</label>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>